--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<h1 class="posts">{{ page.title }}</h1>
+<p class="skills"><strong>Skills:</strong> {{ page.skills }}</p>
 
 <div class="post">
   {{ content }}
