--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,25 +1,27 @@
-body { margin: 60px auto; width: 70%; }
+body { margin: 60px auto; width: 44%; }
 
 span#project_listing { display: block; clear: left; }
 span#contact_info { display: block; text-align: center; font-size: 0.9em; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; font-weight: bold; }
 
 a { text-decoration: none; color: #4a8fe7; }
 a:hover { text-decoration: underline; }
-a.project_listing { font-size: 1.2em; line-height: 1.4em; margin-top: 8px; margin-bottom: 8px; display: inline-block; margin-left: 20px; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; font-weight: bold; }
-a.contact_info { margin-right: 3px; margin-left: 3px; }
+a.project_listing { font-size: 1.4em; line-height: 1.4em; margin-top: 8px; margin-bottom: 8px; display: inline-block; margin-left: 20px; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; font-weight: 300; }
+a.contact_info { margin-right: 3px; margin-left: 3px; font-size: 1.5em; font-weight: 300; }
 
-p, ul { font-size: 1.2em; line-height: 1.4em; color: #333; margin-top: 8px; margin-bottom: 8px; }
+p, ul { font-size: 1.3em; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; font-weight: 400; line-height: 1.4em; color: #333; margin-top: 8px; margin-bottom: 8px; }
+p.skills { font-size: 1.4em; font-weight: 300; }
 
-img { border-radius: 50%; }
 img.center { display: block; margin: 0 auto; }
 img.project_listing { display: inline-block; float: left; margin-top: 10px; margin-bottom: 10px; }
+img.blog_post_body { width: 100%; height: 50%; margin-top: 50px; margin-bottom: 50px; }
 
 h1, h2, h3, h4 { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
-h1 { font-size: 3.0em; }
-h1.home_page { text-align: center; margin-top: 15px; margin-bottom: 5px; }
-h2 { font-size: 2.7em; }
-h3 { font-size: 2.3em; }
-h4 { font-size: 1.7em; }
+h1 { font-size: 3.2em; font-weight: 300; }
+h1.home_page { text-align: center; margin-top: 35px; margin-bottom: 5px; }
+h1.posts { text-align: center; margin-top: 35px; margin-bottom: 20px; }
+h2 { font-size: 2.7em; font-weight: 300; }
+h3 { font-size: 2.3em; font-weight: 300; }
+h4 { font-size: 2.2em; font-weight: 300; margin-bottom: 0px; }
 h4.home_page { border-top: 1px solid #d5d5d5; padding-top: 15px; margin-top: 30px; margin-bottom: 20px; }
 
 nav ul, footer ul { font-size: 1em; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: bold; }
@@ -38,3 +40,4 @@ ul.posts li { list-style: none; }
 .cv address, .cv .download { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
 .cv address, .cv p { font-size: 1.2em; }
 .cv .download { float: right; font-size: .8em; text-transform: uppercase; }
+
